quick fix to bottom nav on mobile index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7312,6 +7312,14 @@ header h1 {
     left: 35px;
     bottom: 20px;
     z-index: 100;
+    width: 100%;
+}
+
+@media all and (max-width: 576px) {
+    .botrow {
+        left: 0;
+        text-align: center;
+    }
 }
 
 .centered {
